--- a/ComicBookGallery/Views/ComicBooks/Detail.cshtml
+++ b/ComicBookGallery/Views/ComicBooks/Detail.cshtml
@@ -24,14 +24,25 @@
 </head>
 <body>
     <div>
-    <h1>@seriesTitle</h1>
-    <h2>Issue #@issueNumber</h2>
-     
-    <h5>Description:</h5>
-    <div>@Html.Raw(@description)</div>
+        <h1>@seriesTitle</h1>
+        <h2>Issue #@issueNumber</h2>
 
-    <h5>Artists:</h5>
-    <div>@artists</div>
+        <h5>Description:</h5>
+        <div>@Html.Raw(@description)</div>
+
+        @if (artists.Length>0)
+        {
+            <h5>Artists:</h5>
+            <div>
+                <ul>
+                    @foreach (var artist in artists)
+                    {
+                        <li>
+                            <text>@artist</text>
+                        </li>
+                    }
+                </ul>
+            </div>}
     </div>
 </body>
 </html>
