--- a/ComicBookGallery/Views/ComicBooks/Detail.cshtml
+++ b/ComicBookGallery/Views/ComicBooks/Detail.cshtml
@@ -1,35 +1,32 @@
 ﻿@{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Comic Book Detail";
+
 }
 
-<!DOCTYPE html>
+@*the following items are no longer needed, now that we are sharing a layout:*@
 
-<html>
+@*<!DOCTYPE html>*@
+@*<html>
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title></title>
-</head>
-<body>
+<body>*@ 
+
+<h1>@ViewBag.SeriesTitle</h1>
+<h2>Issue #@ViewBag.IssueNumber</h2>
+
+<h5>Description:</h5>
+<div>@Html.Raw(ViewBag.Description)</div>
+
+@if (ViewBag.Artists.Length > 0)
+{
+    <h5>Artists:</h5>
     <div>
-        <h1>@ViewBag.SeriesTitle</h1>
-        <h2>Issue #@ViewBag.IssueNumber</h2>
-
-        <h5>Description:</h5>
-        <div>@Html.Raw(ViewBag.Description)</div>
-
-        @if (ViewBag.Artists.Length>0)
-        {
-            <h5>Artists:</h5>
-            <div>
-                <ul>
-                    @foreach (var artist in ViewBag.Artists)
-                    {
-                        <li>
-                            <text>@artist</text>
-                        </li>
-                    }
-                </ul>
-            </div>}
-    </div>
-</body>
-</html>
+        <ul>
+            @foreach (var artist in ViewBag.Artists)
+            {
+                <li>
+                    <text>@artist</text>
+                </li>
+            }
+        </ul>
+    </div>}
