--- a/ComicBookGallery/Views/ComicBooks/Detail.cshtml
+++ b/ComicBookGallery/Views/ComicBooks/Detail.cshtml
@@ -10,25 +10,35 @@
 
 @*<!DOCTYPE html>*@
 @*<html>
-<head>
-<body>*@ 
+    <head>
+    <body>*@
 
-<h1>@Model.SeriesTitle</h1>
-<h2>Issue #@Model.IssueNumber</h2>
 
-<h5>Description:</h5>
-<div>@Html.Raw(Model.DescriptionHtml)</div>
+<div class="row">
+    <div class="col-md-6">
+        <div class="well">
+            <h5><label>Series Title:</label> @Model.SeriesTitle</h5>
+            <h5><label>Issue #:</label> @Model.IssueNumber</h5>
+            <h5><label>Favorite:</label> @(Model.Favorite ? "Yes": "No")</h5>
 
-@if (Model.Artists.Length > 0)
-{
-    <h5>Artists:</h5>
-    <div>
-        <ul>
-            @foreach (var artist in Model.Artists)
+            @if (Model.Artists.Length > 0)
             {
-                <li>
-                    <text>@artist.Role: @artist.Name</text>
-                </li>
-            }
-        </ul>
-    </div>}
+                <h5>Artists:</h5>
+                <div>
+                    <ul>
+                        @foreach (var artist in Model.Artists)
+                        {
+                            <li>
+                                <text>@artist.Role: @artist.Name</text>
+                            </li>
+                        }
+                    </ul>
+                </div>}
+            <h5>Description:</h5>
+            <div>@Html.Raw(Model.DescriptionHtml)</div>
+        </div>
+    <div class="col-md-6">
+        <img src="/Images/@Model.CoverImageFileName"
+             alt="@Model.DisplayText" class="img-responsive" />
+    </div>
+</div>
