--- a/ComicBookGallery/Views/ComicBooks/Index.cshtml
+++ b/ComicBookGallery/Views/ComicBooks/Index.cshtml
@@ -1,17 +1,24 @@
-﻿
+﻿@model      ComicBookGallery.Models.ComicBook[]
+
 @{
-    Layout = null;
+    ViewBag.Title = "Comic Books";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<!DOCTYPE html>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-</head>
-<body>
-    <div> 
-    </div>
-</body>
-</html>
+<h2>@ViewBag.Title</h2>
+
+<div class="row">
+    @foreach (var comicBook in Model)
+    {
+        <div class="col-md-3">
+            <h4>@Html.ActionLink(comicBook.DisplayText, "Detail",new { ID = comicBook.Id })</h4>
+            <a href="@Url.Action("Detail", new {id = comicBook.Id})">
+                <img src="/Images/@comicBook.CoverImageFileName"
+                     alt="@comicBook.DisplayText"
+                     class="img-responsive" />
+            </a>
+        </div>
+    }
+
+</div> 
